# Void

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  clean_build.cmd  clean_linux.sh  dirty_build.cmd  dirty_linux.sh
libs/Lin/SDL3/x64/: install.sh  run_game.sh
src/: Scene.cpp  Scene.hpp  main.cpp
src/Application/: Audio.cpp  Audio.hpp  GameCamera.cpp  GameCamera.hpp  Input.cpp  Input.hpp  Keys.cpp  Keys.hpp  UserInterface.cpp  UserInterface.hpp  Window.cpp  Window.hpp
src/Foundation/: Array.hpp  Assert.hpp  Bit.cpp  Bit.hpp  Blob.hpp  BlobSerialisation.cpp  BlobSerialisation.hpp  Camera.cpp  Camera.hpp  Colour.cpp  Colour.hpp  CompilerTraits.hpp  File.cpp  File.hpp  Gltf.cpp  Gltf.hpp  HashMap.cpp  HashMap.hpp  Log.hpp  Memory.cpp  Memory.hpp  MemoryUtils.hpp  Numerics.cpp  Numerics.hpp  Platform.hpp  Process.cpp  Process.hpp  RelativeDataStructures.hpp  ResourceManager.cpp  ResourceManager.hpp  ResourcePool.cpp  ResourcePool.hpp  String.cpp  String.hpp  Time.cpp  Time.hpp  WindowsDeclarations.hpp
src/Foundation/Algorithm/: Algorithm.hpp  SimdOps.hpp  Sort.hpp
src/Foundation/Containers/: Array.hpp  BitArray.hpp  ChunkedArray.hpp  Pair.hpp  Vector.hpp
src/Foundation/Memory/: Alignment.hpp  Allocator.cpp  Allocator.hpp  AllocatorDiagnostics.hpp  MemoryManager.cpp  MemoryManager.hpp  MemorySimd.h  MemoryTag.cpp  MemoryTag.hpp  MemoryTagScope.cpp  MemoryTagScope.hpp  ObjectPool.hpp  Operations.hpp  Ref.hpp  Scope.hpp  SharedPtr.hpp  TLSFAllocator.hpp  UniquePtr.hpp  VirtualMemory.hpp  VirtualMemoryPosix.cpp  VirtualMemoryWin32.cpp
src/Foundation/Memory/Allocators/: AlignedAllocator.hpp  BinnedAllocator.cpp  BinnedAllocator.hpp  DefaultAllocator.cpp  FrameAllocator.cpp  FrameAllocator.hpp  LinearAllocator.cpp  LinearAllocator.hpp  MallocAllocator.cpp  MallocAllocator.hpp  MonotonicAllocator.hpp  PoolAllocator.cpp  PoolAllocator.hpp  StackAllocator.cpp  StackAllocator.hpp
src/Foundation/Memory/Allocators/Advanced/: BuddyAllocator.cpp  BuddyAllocator.hpp  SecuredAllocator.cpp  SecuredAllocator.hpp  TLSCachingAllocator.cpp  TLSCachingAllocator.hpp  TLSFAllocator.cpp  TLSFAllocator.hpp  ThreadLocalLinearAllocator.cpp  ThreadLocalLinearAllocator.hpp  ThreadSafeAllocator.cpp  ThreadSafeAllocator.hpp  ThreadSafeLinearAllocator.cpp  ThreadSafeLinearAllocator.hpp  TrackedAllocator.cpp  TrackedAllocator.hpp
src/Foundation/Memory/Binned/: Bin.cpp  Bin.hpp  CoreHeap.cpp  CoreHeap.hpp  PageHeap.cpp  PageHeap.hpp  SizeClassTable.cpp  SizeClassTable.hpp  ThreadLocalCache.hpp
src/Foundation/Memory/Debug/: DebugAllocator.cpp  DebugAllocator.hpp  GlobalAllocHooks.cpp  GlobalAllocHooks.hpp  LeakDetector.cpp  LeakDetector.hpp  MemoryProfiler.cpp  MemoryProfiler.hpp
src/Foundation/Threading/: Atomic.hpp  Mutex.hpp  Thread.hpp
src/Foundation/Threading/Common/: Atomic.hpp  Mutex.hpp
src/Foundation/Threading/Debug/: ContentionTracker.cpp
src/Foundation/Threading/Lock/: SpinLock.hpp
src/Foundation/Types/: Any.hpp  NumericLimits.hpp
src/Game/: Asteroid.cpp  Asteroid.hpp  Game.cpp  Game.hpp  MainMenu.cpp  MainMenu.hpp  Player.cpp  Player.hpp  Scene.cpp  Scene.hpp  Utils.hpp
src/Graphics/: 2DRenderer.cpp  2DRenderer.hpp  Billboards.cpp  Billboards.hpp  CommandBuffer.cpp  CommandBuffer.hpp  GPUDevice.cpp  GPUDevice.hpp  GPUEnum.hpp  GPUProfiler.cpp  GPUProfiler.hpp  GPUResources.cpp  GPUResources.hpp  Game.hpp  LoadGLTF.cpp  LoadGLTF.hpp  ParticleRenderer.cpp  ParticleRenderer.hpp  Renderer.cpp  Renderer.hpp  ShaderData.hpp  Skybox.cpp  Skybox.hpp  VoidImgui.cpp  VoidImgui.hpp  VulkanRenderer.cpp  VulkanRenderer.hpp
src/Physics/: ContactListener.cpp  ContactListener.hpp  Physics.cpp  Physics.hpp
src/Shaders/: 2DShader.frag  2DShader.vert  ParticleData.h  billboard.vert  compile.cmd  coreShader.frag  coreShader.vert  coreShaderNew.frag  debugRendering.vert  imgui.frag  imgui.vert  imguiBindless.frag  imguiBindless.vert  mainShader.frag  mainShader.frag.spv  mainShader.vert  mainShader.vert.spv  particle.vert  particleDrawCall.comp  particles.comp  skybox.frag  skybox.vert
src/Utility/: Assert.hpp  Macros.hpp  Move.hpp  SourceLocation.hpp
tests/foundation/containers/: array_tests.cpp  benchmark_baselines.md  chunked_array_tests.cpp  container_benchmarks.cpp
tests/memory/: allocator_benchmark_baselines.md  allocator_benchmarks.cpp  differential_analysis_tests.cpp  leak_profiler_tests.cpp  mem_alignment_tests.cpp  mem_benchmarks.cpp  mem_bin_tests.cpp  mem_convenience_tests.cpp  mem_manager_tests.cpp  mem_rellocation_tests.cpp  mem_stress_tests.cpp  mem_tagging_tests.cpp  size_class_table_tests.cpp  virtual_memory_tests.cpp  zombie_detection_tests.cpp
tests/memory/allocators/: binned_allocator_tests.cpp  buddy_allocator_tests.cpp  default_allocator_tests.cpp  malloc_allocator_tests.cpp  secured_monotonic_page_heap_tests.cpp  tls_caching_allocator_tests.cpp  tlsf_allocator_tests.cpp  tracked_thread-safe_debug_allocator_tests.cpp
